# slack_api_test

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/conversation/: channels_str.rs  errors_str.rs  messages_str.rs  methods_aggregate.rs  mod.rs
src/conversation/entity/: channels_service.rs  mod.rs  users.rs  users_service.rs
src/conversation/services/: channels_cache_fs.rs  chat_channels.rs  chat_history.rs  mod.rs  users_cache_fs.rs
static/storage/: channels_cache.sample.txt  users.sample.txt
